Fix cart z-index issue on Safari

--- a/packages/components/src/components/controllers/cart/sc-cart-loader/sc-cart-loader.scss
+++ b/packages/components/src/components/controllers/cart/sc-cart-loader/sc-cart-loader.scss
@@ -1,5 +1,5 @@
 :host {
-  position: fixed;
+  position: absolute;
   z-index: var(--sc-cart-z-index, 999999);
   font-family: var(--sc-font-sans);
 }
